--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
+
 <head>
 <iframe id='kofiframe' src='https://ko-fi.com/risunz/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px;background:#f9f9f9;' height='712' title='risunz'></iframe>
+    <title>Risunz</title>
+    <link rel="icon" href="https://storage.ko-fi.com/cdn/useruploads/9bc13129-2421-4c0d-9a5b-d8d8699d8178.png" />
+    <link rel="stylesheet" href="style.css" />
 </head>
+
+<body>
+    <iframe src='https://ko-fi.com/risunz/?hidefeed=true&widget=true&embed=true&preview=true'></iframe>
+</body>
+
 </html>
