--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <body>
     <iframe src='https://ko-fi.com/risunz/?hidefeed=true&widget=true&embed=true&preview=true'></iframe>
 </body>
-
+<foot>
+    <a href="/reacty/reacty.html">Contact</a>
+</foot>
 </html>
