--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="/reacty/reacty.html">Contact</a>
+    <a href="/reacty/reacty.html"></a>
     <iframe src='https://ko-fi.com/risunz/?hidefeed=true&widget=true&embed=true&preview=true'></iframe>
 </body>
 
